# dl-template

./: .gitlab-ci.yml  README.md  pyproject.toml  run.py
configs/: config.yaml
configs/callbacks/: wandb.yaml
configs/datamodule/: mnist_datamodule.yaml
configs/experiment/: example_full.yaml
configs/logger/: neptune.yaml  wandb.yaml
configs/model/: mnist_model.yaml
configs/trainer/: default.yaml
docs/source/: conf.py  index.rst  project_src.callbacks.rst  project_src.datamodules.datasets.rst  project_src.datamodules.rst  project_src.models.modules.rst  project_src.models.rst  project_src.rst  project_src.utils.rst
project_src/: train.py
project_src/callbacks/: wandb_callbacks.py
project_src/models/: mnist_model.py
project_src/utils/: utils.py
src/: train.py
src/utils/: utils.py
