[tool.poetry]
name = "dl-template"
version = "0.1.0"
description = ""
authors = ["quentin.blampey <quentin.blampey@gmail.com>"]
readme = "README.md"
# packages = [
#    { include = "src" },
#]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = "1.9.0"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
numpy = "^1.21.2"
torchvision = "^0.10.0"
pytorch-lightning = "^1.4.3"
wandb = "^0.12.0"
rich = "^10.7.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
